# lattice

./: .gitignore  README.md  environment.yml  paper_replication.ipynb  pyproject.toml  requirements.txt
src/: ensemble.py  protein_config.py  test_lattice.py
src/lattice/: cli.py  ensemble.py  protein_config.py
tests/: test_lattice.py
